syntax = "proto3";

package pb;

option go_package = "github.com/khiemta03/bookstore-be/order-service/internal/grpc/order/pb";

message GetOrderRequest {
    string order_id = 1;
    string user_id = 2;
}