syntax = "proto3";

package pb;

option go_package = "github.com/khiemta03/bookstore-be/user-service/internal/grpc/user/pb";

message ValidateLoginCredentialsRequest {
    string username = 1;
    string password = 2;
}

message ValidateLoginCredentialsResponse {
    bool isValid = 1;
    string error = 2;
}
